examples/test/testpolicy10905.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10905
  namespace: namespace335
spec:
  podSelector:
    matchLabels:
      key6: value17
      key23: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value31
      podSelector:
        matchLabels:
          key47: value6
          key36: value28
